Courses/202312/Templates/LanguageAI/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ailanguage-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ailanguage
  template:
    metadata:
      labels:
        app: ailanguage
    spec:
      containers:
        - image: mcr.microsoft.com/azure-cognitive-services/textanalytics/language:latest
          name: ailanguage-container
