Courses/202312/Templates/LanguageAI/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ailanguage-service
spec:
  type: ClusterIP
  selector:
    app: ailanguage
  ports:
    - port: 80
      targetPort: 5000
