Courses/202312/Templates/LanguageAI/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /lan/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: ailanguage-service
            port:
              number: 80
